@@ -1,4 +1,6 @@
 sunspot.month <- stats::ts(c(
+## cat(sub("^0[.]", ".",
+##         sprintf("%.1f,\n", ss.month[,"sunsp"])), sep="")
 58.0,
 62.6,
 70.0,
@@ -1200,7 +1202,7 @@ sunspot.month <- stats::ts(c(
 114.6,
 159.5,
 157.0,
-131.7,
+131.8,
 96.2,
 102.5,
 80.6,
@@ -1254,9 +1256,9 @@ sunspot.month <- stats::ts(c(
 34.7,
 40.0,
 45.9,
-50.4,
+50.5,
 33.5,
-42.3,
+42.4,
 28.8,
 23.4,
 15.4,
@@ -1299,7 +1301,7 @@ sunspot.month <- stats::ts(c(
 7.4,
 5.2,
 11.1,
-28.6,
+28.5,
 16.0,
 22.2,
 16.9,
@@ -1405,7 +1407,7 @@ sunspot.month <- stats::ts(c(
 12.8,
 31.6,
 38.4,
-24.6,
+24.5,
 17.6,
 12.9,
 16.5,
@@ -1427,7 +1429,7 @@ sunspot.month <- stats::ts(c(
 13.5,
 9.6,
 25.2,
-15.6,
+15.5,
 15.7,
 26.5,
 36.6,
@@ -1450,10 +1452,10 @@ sunspot.month <- stats::ts(c(
 80.6,
 59.3,
 78.1,
-104.3,
+104.4,
 77.3,
 114.9,
-157.6,
+157.5,
 160.0,
 176.0,
 135.6,
@@ -1661,7 +1663,7 @@ sunspot.month <- stats::ts(c(
 6.9,
 20.0,
 15.7,
-23.3,
+23.4,
 21.4,
 7.4,
 6.6,
@@ -2149,7 +2151,7 @@ sunspot.month <- stats::ts(c(
 45.2,
 83.5,
 73.5,
-85.4,
+85.5,
 80.6,
 77.0,
 91.4,
@@ -2327,7 +2329,7 @@ sunspot.month <- stats::ts(c(
 19.2,
 30.7,
 22.5,
-12.4,
+12.5,
 28.9,
 27.4,
 26.1,
@@ -2496,7 +2498,7 @@ sunspot.month <- stats::ts(c(
 201.3,
 192.1,
 165.0,
-130.2,
+130.3,
 157.4,
 175.2,
 164.6,
@@ -2592,7 +2594,7 @@ sunspot.month <- stats::ts(c(
 7.4,
 15.1,
 17.5,
-14.2,
+14.3,
 11.7,
 6.8,
 24.1,
@@ -2692,7 +2694,7 @@ sunspot.month <- stats::ts(c(
 46.0,
 57.7,
 42.4,
-37.5,
+39.5,
 23.1,
 25.6,
 59.3,
@@ -2817,7 +2819,7 @@ sunspot.month <- stats::ts(c(
 71.8,
 50.3,
 55.8,
-33.3,
+33.4,
 33.4,
 57.0,
 85.4,
@@ -2986,5 +2988,194 @@ sunspot.month <- stats::ts(c(
 51.3,
 22.8,
 39.0,
-41.2),
-start = c(1749,1), end = c(1997,12), frequency = 12)
+41.2,
+31.9,
+40.3,
+54.8,
+53.4,
+56.3,
+70.7,
+66.6,
+92.2,
+92.9,
+55.5,
+74.0,
+81.9,
+62.0,
+66.3,
+68.8,
+63.7,
+106.4,
+137.7,
+113.5,
+93.7,
+71.5,
+116.7,
+133.2,
+84.6,
+90.1,
+112.9,
+138.5,
+125.5,
+121.6,
+124.9,
+170.1,
+130.5,
+109.7,
+99.4,
+106.8,
+104.4,
+95.6,
+80.6,
+113.5,
+107.7,
+96.6,
+134.0,
+81.8,
+106.4,
+150.7,
+125.5,
+106.5,
+132.2,
+114.1,
+107.4,
+98.4,
+120.7,
+120.8,
+88.3,
+99.6,
+116.4,
+109.6,
+97.5,
+95.5,
+80.8,
+79.7,
+46.0,
+61.1,
+60.0,
+54.6,
+77.4,
+83.3,
+72.7,
+48.7,
+65.5,
+67.3,
+46.5,
+37.3,
+45.8,
+49.1,
+39.3,
+41.5,
+43.2,
+51.1,
+40.9,
+27.7,
+48.0,
+43.5,
+17.9,
+31.3,
+29.2,
+24.5,
+24.2,
+42.7,
+39.3,
+40.1,
+36.4,
+21.9,
+8.7,
+18.0,
+41.1,
+15.3,
+4.9,
+10.6,
+30.2,
+22.3,
+13.9,
+12.2,
+12.9,
+14.4,
+10.5,
+21.4,
+13.6,
+16.8,
+10.7,
+4.5,
+3.4,
+11.7,
+12.1,
+9.7,
+6.0,
+2.4,
+.9,
+1.7,
+10.1,
+3.3,
+2.1,
+9.3,
+2.9,
+3.2,
+3.4,
+.8,
+.5,
+1.1,
+2.9,
+4.1,
+.8,
+1.3,
+1.4,
+.7,
+.8,
+2.9,
+2.9,
+3.2,
+.0,
+4.3,
+4.8,
+4.1,
+10.8,
+13.2,
+18.8,
+15.4,
+8.0,
+8.7,
+13.6,
+16.1,
+19.6,
+25.2,
+23.5,
+21.5,
+14.4,
+18.8,
+29.6,
+55.8,
+54.4,
+41.6,
+37.0,
+43.8,
+50.6,
+78.0,
+88.0,
+96.7,
+73.0,
+58.3,
+32.9,
+64.3,
+55.2,
+69.0,
+64.5,
+66.5,
+63.0,
+61.4,
+53.3,
+61.8,
+40.8,
+62.9,
+38.1,
+57.9,
+72.4,
+78.7,
+52.5,
+57.0,
+66.0,
+37.0,
+    NULL), start = 1749, frequency = 12)
