@@ -6,11 +6,11 @@
 \name{sunspot.month}
 \docType{data}
 \alias{sunspot.month}
-\title{
-  Monthly Sunspot Data, 1749--1997
-}
+\title{Monthly Sunspot Data, from 1749 to "Present"}
 \description{
-  Monthly numbers of sunspots.
+  Monthly numbers of sunspots, as from the World Data Center, aka SIDC.
+  This is the version of the data that will occasionally be updated when
+  new counts become available.%% ~/R/MM/MISC/read-sunspots.R
 }
 \usage{
 sunspot.month
@@ -21,19 +21,24 @@ sunspot.month
   The objects are of class \code{"ts"}.
 }
 \seealso{
-  \code{sunspot.month} is a longer version of \code{\link{sunspots}}
-  that runs until 1997 rather than 1983.
+  \code{sunspot.month} is a longer version of \code{\link{sunspots}};
+  the latter runs until 1983 and is kept fixed (for reproducibility as example
+  dataset).
 }
 \source{
-  World Data Center-C1 For Sunspot Index
+  WDC-SILSO, Solar Influences Data Analysis Center (SIDC),
   Royal Observatory of Belgium, Av. Circulaire, 3, B-1180 BRUSSELS
-  \url{http://www.oma.be/KSB-ORB/SIDC/sidc_txt.html}
+  Currently at \url{http://www.sidc.be/silso/datafiles}% was http://sidc.oma.be/sunspot-data/
+}
+\author{
+  R
 }
 \examples{
 require(stats); require(graphics)
 ## Compare the monthly series
-plot (sunspot.month, main = "sunspot.month [stats]", col = 2)
-lines(sunspots) # "very barely" see something
+plot (sunspot.month,
+      main="sunspot.month & sunspots [package'datasets']", col=2)
+lines(sunspots) # -> faint differences where they overlap
 
 ## Now look at the difference :
 all(tsp(sunspots)     [c(1,3)] ==
@@ -43,7 +48,7 @@ table(eq <- sunspots == sunspot.month[1:n1]) #>  132  are different !
 i <- which(!eq)
 rug(time(eq)[i])
 s1 <- sunspots[i] ; s2 <- sunspot.month[i]
-cbind(i = i, sunspots = s1, ss.month = s2,
+cbind(i = i, time = time(sunspots)[i], sunspots = s1, ss.month = s2,
       perc.diff = round(100*2*abs(s1-s2)/(s1+s2), 1))
 }
 \keyword{datasets}
