@@ -271,6 +271,11 @@
       implements Ward's method correctly.  The previous \code{"ward"}
       method is \code{"ward.D"} now, with the old name still working.
       Thanks to research and proposals by Pierre Legendre.
+
+      \item The \code{sunspot.month} dataset has been amended and
+      updated from the official source, whereas \code{sunspots} and
+      \code{sunspot.year} will remain immutable, and the docs and source
+      links have been updated correspondingly.
     }
   }
 
